--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b67e80">  <td>23/05/12 13:39:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.Closeapp(org.testng.ITestResult)[pri:0, instance:Scripts.TestCase1@20ccf40b]">&lt;&lt;Closeapp</td> 
-<td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="98ac89">  <td>23/05/12 13:39:08</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.tc1()[pri:0, instance:Scripts.TestCase1@20ccf40b]">tc1</td> 
-  <td>main@1961002599</td>   <td></td> </tr>
-<tr bgcolor="b67e80">  <td>23/05/12 13:38:26</td>   <td>-42227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.OpenApp()[pri:0, instance:Scripts.TestCase1@20ccf40b]">&gt;&gt;OpenApp</td> 
-<td>&nbsp;</td>  <td>main@1961002599</td>   <td></td> </tr>
+<tr bgcolor="dcc9fe">  <td>24/02/27 17:54:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeapp(org.testng.ITestResult)[pri:0, instance:Scripts.TestCase1@79924b]">&lt;&lt;closeapp</td> 
+<td>&nbsp;</td>  <td>main@846254484</td>   <td></td> </tr>
+<tr bgcolor="dcc9fe">  <td>24/02/27 17:54:41</td>   <td>-289</td> <td title="&gt;&gt;Baseclass.bs()[pri:0, instance:Scripts.TestCase1@79924b]">&gt;&gt;bs</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@846254484</td>   <td></td> </tr>
+<tr bgcolor="dcc9fe">  <td>24/02/27 17:54:41</td>   <td>158</td> <td title="&lt;&lt;Baseclass.as()[pri:0, instance:Scripts.TestCase1@79924b]">&lt;&lt;as</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@846254484</td>   <td></td> </tr>
+<tr bgcolor="92de6c">  <td>24/02/27 17:54:41</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.tc1()[pri:0, instance:Scripts.TestCase1@79924b]">tc1</td> 
+  <td>main@846254484</td>   <td></td> </tr>
 </table>
