--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Closeapp</td>
+<td>closeapp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
