--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b959e">  <td>23/05/06 22:36:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.OpenApp()[pri:0, instance:Scripts.TestCase1@53fdffa1]">&gt;&gt;OpenApp</td> 
-<td>&nbsp;</td>  <td>main@1446983876</td>   <td></td> </tr>
-<tr bgcolor="8ffcb7">  <td>23/05/06 22:36:47</td>   <td>17437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.tc1()[pri:0, instance:Scripts.TestCase1@53fdffa1]">tc1</td> 
-  <td>main@1446983876</td>   <td></td> </tr>
-<tr bgcolor="8b959e">  <td>23/05/06 22:36:47</td>   <td>17447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.Closeapp(org.testng.ITestResult)[pri:0, instance:Scripts.TestCase1@53fdffa1]">&lt;&lt;Closeapp</td> 
+<tr bgcolor="9fe9b6">  <td>23/11/30 00:55:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Baseclass.OpenApp()[pri:0, instance:Scripts.TestCase1@67d48005]">&gt;&gt;OpenApp</td> 
+<td>&nbsp;</td>  <td>main@2005435445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>23/11/30 00:57:08</td>   <td>105894</td> <td title="&lt;&lt;Baseclass.as()[pri:0, instance:Scripts.TestCase1@67d48005]">&lt;&lt;as</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2005435445</td>   <td></td> </tr>
+<tr bgcolor="9a82a9">  <td>23/11/30 00:57:08</td>   <td>105425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.tc1()[pri:0, instance:Scripts.TestCase1@67d48005]">tc1</td> 
+  <td>main@2005435445</td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>23/11/30 00:57:08</td>   <td>105446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Baseclass.closeapp(org.testng.ITestResult)[pri:0, instance:Scripts.TestCase1@67d48005]">&lt;&lt;closeapp</td> 
 <td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="9fe9b6">  <td>23/11/30 00:55:22</td>   <td>-275</td> <td title="&gt;&gt;Baseclass.bs()[pri:0, instance:Scripts.TestCase1@67d48005]">&gt;&gt;bs</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2005435445</td>   <td></td> </tr>
 </table>
